2009-03-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg-load.c (load_image)
	* plug-ins/file-jpeg/jpeg-save.c (save_image): need to finish the
	progress update.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c: formatting.

2009-03-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/blinds.c: use enum GimpOrientationType instead
	of local #defines for HORIZONTAL and VERTICAL with identical
	values. Some indentation and formatting fixups.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererimagefile.c
	(gimp_view_renderer_imagefile_get_icon)
	* plug-ins/print/print.c (query): removed GTK+ version checks that
	have become obsolete.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-uri/Makefile.am
	* plug-ins/file-uri/gimpmountoperation.[ch]: removed these files.

	* plug-ins/file-uri/uri-backend-gvfs.c: use GtkMountOperation
	instead of our copy of this widget.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on GTK+ >= 2.14.4.

	* INSTALL: changed accordingly.

2009-03-05  Sven Neumann  <sven@gimp.org>

	Bug 573695 – 1-bit white background saved as PBM becomes all black

	* plug-ins/common/file-pnm.c: need to handle the special case that
	the image colormap has only one entry.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb: added new procedure gimp-image-get-uri.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

	* plug-ins/pygimp/pygimp-image.c: wrap the new procedure into an
	Image attribute.

2009-03-04  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb (image_get_filename): improved docs
	for gimp-image-get-filename.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb (image_get_name_invoker): use